[tool.poetry]
name = "ezvi"
version = "0.1.2"
description = "Automated typing in the Vi editor."
license = "MIT"
readme = "README.md"
authors = ["TripckyTroll <tricky@beon.ca>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX"
]

[tool.poetry.dependencies]
python = "^3.7"
astroid = "==2.4.2"
click = "==7.1.2"
isort = "==5.6.4"
lazy-object-proxy = "==1.4.3"
mccabe = "==0.6.1"
pylint = "==2.6.0"
PyYAML = "==5.3.1"
six = "==1.15.0"
toml = "==0.10.2"
wrapt = "==1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ezvi = "ezvi.cli:main"